  o Client Changes:
    * Added cvc promote command. (CNY-1304)
    * Added interface (but no command line option) for performing
      partial clones, where only some components out of a package
      are cloned based on byDefault settings. (CNY-1389)
    * Allow merging and installing of changesets with compatible (non-diff)
      sharing of (pathId,fileId) combinations (CNY-1253)

  o Bug Fixes:
    * Local flags are now cleared after each group cook, meaning that
      multipass group cooks will have the correct local flavor. (CNY-1400)
    * Dep resolution in group cooks now also take advantage of the group 
      cache. (CNY-1386)
    * Changesets for source troves with missing files (because the file is
      missing from the upstream server or the upstream server is unavailable)
      are properly written to changeset files. (CNY-1415)
    * Derived packages (experimental) now correctly handle multiple
      architectures built from the same source. (CNY-1423)
    * loadInstalled now always works even if you have multiple versions of 
      a package installed from multiple branches.
    * Trove names are now checked for legal characters. (CNY-1358)
    * A minor bug related to file uploads on the error codepath was fixed.
      (CNY-1442)

  o Server Changes:
    * The repository cache was completely reworked. This fixed problems with
      authorization and the cache, and had the side benefits of unifying
      the proxy code for the repository and the proxy. The cacheDB repository
      configuration parameter is obsolete (and will cause an error on
      startup). changesetCacheDir should now be used instead, and tmpwatch
      now needs to be run on that directory as well as the tmpDir set in the
      configuration (CNY-1387)
    * Properly commits changesets where multiple troves reference the same
      (pathId,fileId) key (CNY-1414)

  o Build Changes:
    * The vmware flavor has been defined, representing whether the